templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_missing_if_condition.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x missing condition
   ,----
 1 | {% if %}
   :      |
   :      `-- provide a condition after `if`
   `----
