templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_missing_map_key.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x map key `nope` not found
   ,----
 1 | {{ map.nope }}
   :        ^^|^
   :          `-- use an existing key
   `----
