templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_orphan_elif.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x `elif` outside of an `if` block
   ,----
 1 | {% elif x %}
   : ^^^^^^|^^^^^
   :       `-- move `elif` inside an `if` block
   `----
