templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_orphan_end.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x orphan `end`
   ,----
 1 | {% end %}
   : ^^^^|^^^^
   :     `-- remove this `end`
   `----
