templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_stray_comment_delimiter.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x stray delimiter
   ,----
 1 | #}
   : ^|
   :  `-- remove or escape this delimiter
   `----
