templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_trailing_comma_in_call.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x trailing comma
   ,----
 1 | {{ same(1,) }}
   :          |
   :          `-- remove the trailing comma
   `----
