templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_trailing_dot_in_access.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x empty field name
   ,----
 1 | {{ x. }}
   :     |
   :     `-- provide a field name after `.`
   `----
