templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_unclosed_statement.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed delimiter
   ,----
 1 | {% if x
   : ^|
   :  `-- close the tag with `%}`
   `----
