templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_undefined_function.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x undefined function `nope`
   ,----
 1 | {{ nope() }}
   :    ^^|^
   :      `-- use a defined function name
   `----
