templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_unexpected_token_in_multiline.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unexpected token
   ,-[2:3]
 1 | {{
 2 |   @
   :   |
   :   `-- remove or correct this token
 3 | }}
   `----
