templater/tests/snapshots/error__invalid_template_reports_diagnostic__reports_unrecognized_statement.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unrecognized statement `endif`
   ,----
 1 | {% endif %}
   :    ^^|^^
   :      `-- use a valid statement keyword
   `----
